working on errors

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Password Generator</title>
     <meta name="description" content="Generate a secure password with customizable criteria" />
     <meta name="keywords" content="password generator, secure password, password security" />
-    <link rel="stylesheet" href="/Develop/style.css" />
-    <link rel="icon" type="image/png" href="/Develop/favicon.png" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@
             </div>
         </div>
     </div>
-    <script src="/Develop/script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
