--- a/index.html
+++ b/index.html
@@ -14,19 +14,25 @@
 <body>
     <div class="wrapper">
         <header>
-            <h1>Password Generator</h1>
+            <h1>Automated Custom Password Generator</h1>
+            <button id="darkModeToggle" class="btn">Screen too bright? Click here for Dark Mode</button>
+            <!-- Dark Mode Toggle -->
         </header>
         <div class="card">
             <div class="card-header">
-                <h2>Generate a Password</h2>
+                <h2>Let's Generate you a Custom Password</h2>
             </div>
             <div class="card-body">
-                <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"
-                    aria-live="polite" <!-- Updates screen readers with password changes -->
-        ></textarea>
+                <input type="number" id="promptInput"
+                    placeholder="Input Your Password Length Here.  Choose between 8-128 characters long!)" min="8"
+                    max="128" />
+                <textarea readonly id="password" placeholder="Here Is Your New Secure Password"></textarea>
+                <p id="passwordLengthMsg"></p> <!-- Message about password length -->
             </div>
             <div class="card-footer">
-                <button id="generate" class="btn">Click Here To Generate a Custom Password</button>
+                <button id="generate" class="btn">Generate Custom Password</button>
+                <button id="copy" class="btn">Copy Password</button>
+                <button id="reset" class="btn">Reset</button>
             </div>
         </div>
     </div>
